force-app/main/default/objects/Sales_Order_Header__c/Sales_Order_Header__c.object-meta.xml
<CustomObject>
    <label>Sales Order Header</label>
    <nameField>
        <displayFormat>SOH-{000000}</displayFormat>
        <label>Sales Order Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Headers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>