force-app/main/default/objects/Sales_Order_Header__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Order Headers</relationshipLabel>
    <relationshipName>Sales_Order_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>