force-app/main/default/objects/Sales_Order_Header__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <label>Bill To</label>
    <length>32</length>
    <type>Text</type>
</CustomField>