force-app/main/default/objects/Sales_Order_Header__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>