force-app/main/default/objects/Sales_Order_Header__c/fields/DOS_Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>DOS_Shipping_Method__c</fullName>
    <label>DOS Shipping Method</label>
    <length>1</length>
    <type>Text</type>
</CustomField>