force-app/main/default/objects/Sales_Order_Header__c/fields/DOS_Shipping_Method_Definition__c.field-meta.xml
<CustomField>
    <fullName>DOS_Shipping_Method_Definition__c</fullName>
    <formula>IF( DOS_Shipping_Method__c == &#39;1&#39;, &#39;Back-to-Store&#39;,  IF(DOS_Shipping_Method__c == &#39;6&#39;, &#39;Home Delivery&#39;,  IF(DOS_Shipping_Method__c == &#39;D&#39;, &#39;MDO Dock Pick Up&#39;, &#39;&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DOS Shipping Method Definition</label>
    <type>Text</type>
</CustomField>