force-app/main/default/objects/Sales_Order_Header__c/fields/DS_Network_Code__c.field-meta.xml
<CustomField>
    <fullName>DS_Network_Code__c</fullName>
    <label>DS Network Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>