force-app/main/default/objects/Sales_Order_Header__c/fields/Full_Line_Assoc__c.field-meta.xml
<CustomField>
    <fullName>Full_Line_Assoc__c</fullName>
    <label>Full Line Assoc</label>
    <length>11</length>
    <type>Text</type>
</CustomField>