force-app/main/default/objects/Sales_Order_Header__c/fields/OPRID_Entered__c.field-meta.xml
<CustomField>
    <fullName>OPRID_Entered__c</fullName>
    <label>OPRID Entered</label>
    <length>12</length>
    <type>Text</type>
</CustomField>