force-app/main/default/objects/Sales_Order_Header__c/fields/Order_Group__c.field-meta.xml
<CustomField>
    <fullName>Order_Group__c</fullName>
    <label>Order Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>