force-app/main/default/objects/Sales_Order_Header__c/fields/Order_Source__c.field-meta.xml
<CustomField>
    <fullName>Order_Source__c</fullName>
    <label>Order Source</label>
    <length>30</length>
    <type>Text</type>
</CustomField>