force-app/main/default/objects/Sales_Order_Header__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Order Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>