force-app/main/default/objects/Sales_Order_Header__c/fields/Originating_Doc_Number__c.field-meta.xml
<CustomField>
    <fullName>Originating_Doc_Number__c</fullName>
    <label>Originating Doc Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>