force-app/main/default/objects/Sales_Order_Header__c/fields/Partner_ZASC__c.field-meta.xml
<CustomField>
    <fullName>Partner_ZASC__c</fullName>
    <label>Partner ZASC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>