force-app/main/default/objects/Sales_Order_Header__c/fields/Partner_ZASC_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_ZASC_Name__c</fullName>
    <label>Partner ZASC Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>