force-app/main/default/objects/Sales_Order_Header__c/fields/Receiving_SUDS_Number__c.field-meta.xml
<CustomField>
    <fullName>Receiving_SUDS_Number__c</fullName>
    <label>Receiving SUDS Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>