force-app/main/default/objects/Sales_Order_Header__c/fields/Rejection_Status__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Status__c</fullName>
    <label>Rejection Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>