force-app/main/default/objects/Sales_Order_Header__c/fields/Requested_Delivery_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Requested_Delivery_Date_Text__c</fullName>
    <description>Convert the delivery date to text for displaying on Account page</description>
    <formula>TEXT(MONTH(Requested_Delivery_Date__c))+&quot;/&quot; +TEXT(DAY(Requested_Delivery_Date__c))+&quot;/&quot; +TEXT(YEAR(Requested_Delivery_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Delivery Date Text</label>
    <type>Text</type>
</CustomField>