force-app/main/default/objects/Sales_Order_Header__c/fields/RMA_Number__c.field-meta.xml
<CustomField>
    <fullName>RMA_Number__c</fullName>
    <label>RMA Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>