force-app/main/default/objects/Sales_Order_Header__c/fields/RMA_Type__c.field-meta.xml
<CustomField>
    <fullName>RMA_Type__c</fullName>
    <label>RMA Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>