force-app/main/default/objects/Sales_Order_Header__c/fields/SDO_Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>SDO_Unit_Number__c</fullName>
    <label>SDO Unit Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>