force-app/main/default/objects/Sales_Order_Header__c/fields/SDOMDO_Flag__c.field-meta.xml
<CustomField>
    <fullName>SDOMDO_Flag__c</fullName>
    <label>SDOMDO Flag</label>
    <length>4</length>
    <type>Text</type>
</CustomField>