force-app/main/default/objects/Sales_Order_Header__c/fields/Service_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Order_Number__c</fullName>
    <label>Service Order Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>