force-app/main/default/objects/Sales_Order_Header__c/fields/Service_Unit__c.field-meta.xml
<CustomField>
    <fullName>Service_Unit__c</fullName>
    <label>Service Unit</label>
    <length>5</length>
    <type>Text</type>
</CustomField>