force-app/main/default/objects/Sales_Order_Header__c/fields/Ship_From__c.field-meta.xml
<CustomField>
    <fullName>Ship_From__c</fullName>
    <label>Ship From</label>
    <length>35</length>
    <type>Text</type>
</CustomField>