force-app/main/default/objects/Sales_Order_Header__c/fields/Ship_To_Name_3__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Name_3__c</fullName>
    <label>Ship To Name 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>