force-app/main/default/objects/Sales_Order_Header__c/fields/Split_Billing_Flag__c.field-meta.xml
<CustomField>
    <fullName>Split_Billing_Flag__c</fullName>
    <label>Split Billing Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>