force-app/main/default/objects/Sales_Order_Header__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <length>32</length>
    <type>Text</type>
</CustomField>