force-app/main/default/objects/Sales_Order_Header__c/fields/Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Store_Id__c</fullName>
    <label>Store Id</label>
    <length>5</length>
    <type>Text</type>
</CustomField>