force-app/main/default/objects/Sales_Order_Header__c/fields/System_Mod_Stamp__c.field-meta.xml
<CustomField>
    <fullName>System_Mod_Stamp__c</fullName>
    <label>System Mod Stamp</label>
    <type>Date</type>
</CustomField>