force-app/main/default/objects/Sales_Order_Header__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <length>30</length>
    <type>Text</type>
</CustomField>