force-app/main/default/objects/Sales_Order_Header__c/fields/Total_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales__c</fullName>
    <description>Sum of total sales on the sales order from each sales order line item</description>
    <label>Total Sales</label>
    <summarizedField>Sales_Order_Line_Item__c.Sales_Revenue__c</summarizedField>
    <summaryForeignKey>Sales_Order_Line_Item__c.Sales_Order_Header__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>