force-app/main/default/objects/Sales_Order_Header__c/fields/Transaction_Description__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Description__c</fullName>
    <label>Transaction Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>