force-app/main/default/objects/Sales_Order_Header__c/fields/Transaction_Type_Definition__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type_Definition__c</fullName>
    <label>Transaction Type Definition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>