force-app/main/default/objects/Sales_Order_Header__c/validationRules/Cannot_Edit_Order_Header_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Order_Header_Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Name)
&amp;&amp;
NOT (ISNEW())</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Name cannot be modified</errorMessage>
</ValidationRule>